--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools>=61"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "pointint"
 version = "0.1.0"
@@ -13,8 +9,36 @@ dependencies = [
     "warp-lang==1.9.0",
     "loguru>=0.7.2",
     "tqdm>=4.66.5",
-    "trimesh>=4.4.0",
-    "pyglet>=1.5.27,<2",
-    "k3d>=2.16.0",
     "pip>=24.0",
+    "pyside6",
+    "pyvista",
+    "pyvistaqt"
 ]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["pointint"]
+
+[tool.setuptools.package-data]
+pointint = ["py.typed"]
+
+[tool.uv]
+index-strategy = "unsafe-best-match"
+
+[tool.uv.sources]
+torch = { index = "pytorch-cu126" }
+torchvision = { index = "pytorch-cu126" }
+kaolin = { index = "kaolin-cu126" }
+
+[[tool.uv.index]]
+name = "pytorch-cu126"
+url = "https://download.pytorch.org/whl/cu126"
+explicit = true
+
+[[tool.uv.index]]
+name = "kaolin-cu126"
+url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.8.0_cu126.html"
+format = "flat"
