Add multi-object intersection volume and unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,16 @@ if(BUILD_TESTS)
       FOLDER "test"
     )
   endif()
+  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/test/test_multi_object.cpp")
+    add_executable(poIntInt_test_multi test/test_multi_object.cpp)
+    target_link_libraries(poIntInt_test_multi PRIVATE poIntInt_core)
+    set_target_properties(poIntInt_test_multi PROPERTIES
+      CUDA_SEPARABLE_COMPILATION ON
+      CUDA_RESOLVE_DEVICE_SYMBOLS ON
+      CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}"
+      FOLDER "test"
+    )
+  endif()
 endif()
 
 # ---- Status Output ----
