Add Gaussian splat support and unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,16 @@ if(BUILD_TESTS)
       FOLDER "test"
     )
   endif()
+  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/test/test_gaussian_splats.cpp")
+    add_executable(poIntInt_test_gaussian test/test_gaussian_splats.cpp)
+    target_link_libraries(poIntInt_test_gaussian PRIVATE poIntInt_core)
+    set_target_properties(poIntInt_test_gaussian PROPERTIES
+      CUDA_SEPARABLE_COMPILATION ON
+      CUDA_RESOLVE_DEVICE_SYMBOLS ON
+      CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}"
+      FOLDER "test"
+    )
+  endif()
 endif()
 
 # ---- Status Output ----
