--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,6 +253,26 @@ if(BUILD_TESTS)
     )
     copy_tbb_dlls(poIntInt_test_multi_object)
   endif()
+  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/test/test_volume_unified.cpp")
+    # Configure header file with source directory path
+    configure_file(
+      "${CMAKE_CURRENT_SOURCE_DIR}/test/test_config.h.in"
+      "${CMAKE_CURRENT_BINARY_DIR}/test_config.h"
+      @ONLY
+    )
+    add_executable(poIntInt_test_volume_unified test/test_volume_unified.cpp)
+    target_link_libraries(poIntInt_test_volume_unified PRIVATE poIntInt_core)
+    # Add include directory for generated config header
+    target_include_directories(poIntInt_test_volume_unified PRIVATE 
+      "${CMAKE_CURRENT_BINARY_DIR}")
+    set_target_properties(poIntInt_test_volume_unified PROPERTIES
+      CUDA_SEPARABLE_COMPILATION ON
+      CUDA_RESOLVE_DEVICE_SYMBOLS ON
+      CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}"
+      FOLDER "test"
+    )
+    copy_tbb_dlls(poIntInt_test_volume_unified)
+  endif()
   if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/test/test_dof_parameterization.cpp")
     add_executable(poIntInt_test_differentiability test/test_dof_parameterization.cpp)
     target_link_libraries(poIntInt_test_differentiability PRIVATE poIntInt_core)
