--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pointint"
 version = "0.1.0"
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.9"
 dependencies = [
     "torch==2.8.0+cu126",
     "torchvision==0.23.0+cu126",
@@ -10,9 +10,6 @@ dependencies = [
     "loguru>=0.7.2",
     "tqdm>=4.66.5",
     "pip>=24.0",
-    "pyside6",
-    "pyvista",
-    "pyvistaqt",
     "viser>=0.2.0",
 ]
 
